# blender2

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/modules/: devshell.nix  pre-commit.nix  rust.nix
src/: main.rs
