[package]
authors = ["huantian <davidtianli@gmail.com>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "blender2"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
cargo = "warn"

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
