[package]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "blender2"
description = "A simple Rust project using Nix"
authors = ["huantian <davidtianli@gmail.com>"]
readme = "README.md"
repository = "https://github.com/huantianad/blender2"
license = "MIT"
version = "0.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

enum_glob_use = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
tokio = { version = "1", features = ["full"] }
poise = "0.6"
macro_env = "0.1"
tokio_schedule = "0.3"
chrono-tz = "0.4"
